--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -44,13 +44,10 @@
             <div class="row">
                 <div class="col-xl-12 col-lg-12">
                     <div class="card card-chart">
-                        <div class="card-header card-header-success">
-                            <!-- <div class="ct-chart" id="dailySalesChart"></div> -->
-                            <div class="ct-chart" id="map"></div>
-                            <!-- API key for map -->
-                            <!--<script type="text/javascript" src="../static/js/config.js"></script>-->
-                            <!-- map div -->
-                            <!-- <div id="map"></div> -->
+                         <div class="card-header card-header-success">
+                            
+                            <div><iframe src="http://127.0.0.1:5000/map" height="450px" width="100%"></iframe></div>
+                            
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">The map Goes Here</h4>
